fix: style, gap between collapse menus

--- a/projet_6_kasa/src/sass/pages/_housing.page.scss
+++ b/projet_6_kasa/src/sass/pages/_housing.page.scss
@@ -73,7 +73,7 @@ $main-color: #ff6060;
         .housing-body__collapses-container {
             display: flex;
             justify-content: space-between;
-            gap: 1rem
+            gap: 5rem;
         }
     
     }
